# eigent

./: .env.development  .gitignore  .lintstagedrc.json  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  README_CN.md  README_JA.md  README_PT-BR.md  electron-builder.json  entitlements.mac.plist  eslint.config.js  index.html  package.json  tailwind.config.js
backend/: .gitignore  .pre-commit-config.yaml  cli.py  main.py  messages.pot  pyproject.toml
backend/app/: __init__.py  router.py
backend/app/agent/: __init__.py  agent_model.py  listen_chat_agent.py  prompt.py  tools.py
backend/app/agent/factory/: browser.py  developer.py  document.py  mcp.py  multi_modal.py  social_media.py
backend/app/agent/toolkit/: abstract_toolkit.py  audio_analysis_toolkit.py  code_execution_toolkit.py  craw4ai_toolkit.py  excel_toolkit.py  file_write_toolkit.py  github_toolkit.py  google_calendar_toolkit.py  google_drive_mcp_toolkit.py  google_gmail_mcp_toolkit.py  human_toolkit.py  hybrid_browser_python_toolkit.py  hybrid_browser_toolkit.py  lark_toolkit.py  linkedin_toolkit.py  markitdown_toolkit.py  mcp_search_toolkit.py  note_taking_toolkit.py  notion_mcp_toolkit.py  notion_toolkit.py  openai_image_toolkit.py  pptx_toolkit.py  pyautogui_toolkit.py  rag_toolkit.py  reddit_toolkit.py  screenshot_toolkit.py  search_toolkit.py  skill_toolkit.py  slack_toolkit.py  terminal_toolkit.py  thinking_toolkit.py  twitter_toolkit.py  video_analysis_toolkit.py  video_download_toolkit.py  web_deploy_toolkit.py  whatsapp_toolkit.py
backend/app/component/: babel.py  code.py  environment.py  error_format.py  model_validation.py
backend/app/component/pydantic/: i18n.py
backend/app/controller/: chat_controller.py  electron_browser.cjs  health_controller.py  model_controller.py  task_controller.py  tool_controller.py
backend/app/exception/: exception.py  handler.py
backend/app/middleware/: __init__.py
backend/app/model/: chat.py  enums.py  model_platform.py
backend/app/service/: chat_service.py  task.py
backend/app/utils/: cookie_manager.py  event_loop_utils.py  file_utils.py  oauth_state_manager.py  single_agent_worker.py  workforce.py
backend/app/utils/listen/: toolkit_listen.py
backend/app/utils/server/: sync_step.py
backend/app/utils/telemetry/: __init__.py  workforce_metrics.py
backend/benchmark/: .env.example  .gitignore  Makefile  README.md  client.py  environment.py  main.py
backend/benchmark/answer/0/: hello_world.py
backend/benchmark/answer/1/: python313_features.md
backend/benchmark/answer/2/: yc_w25_b2b_ai.csv
backend/benchmark/checker/: 0.py  1.py  2.py
backend/benchmark/dataset/: 0.json  1.json  2.json
backend/benchmark/grader/: 0.py  1.py  2.py
backend/benchmark/harbor/: README.md  adapter.py  evaluate.py  run_adapter.py
backend/benchmark/harbor/template/: task.toml
backend/lang/en_US/LC_MESSAGES/: messages.po
backend/lang/zh_CN/LC_MESSAGES/: messages.po
backend/scripts/: init_skills_config.py
backend/tests/: conftest.py
backend/tests/app/agent/: test_agent_model.py  test_listen_chat_agent.py  test_tools.py
backend/tests/app/component/: test_environment.py  test_model_validation.py
backend/tests/app/controller/: test_chat_controller.py  test_model_controller.py  test_task_controller.py  test_tool_controller.py
backend/tests/app/model/: test_chat.py  test_model_platform.py
backend/tests/app/service/: test_chat_service.py  test_task.py
backend/tests/app/utils/: test_file_utils.py  test_single_agent_worker.py  test_workforce.py
server/: .env.example  .gitignore  Dockerfile  README_CN.md  README_EN.md  README_PT-BR.md  alembic.ini  cli.py  docker-compose.dev.yml  docker-compose.yml  eigent.db  main.py  messages.pot  pyproject.toml  start.sh  start_server.bat  start_server.ps1  start_server.sh
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 2025_08_11_2107-0001_init_initial_schema.py  2025_09_28_1621-d74ab2a44600_drop_mcp_user_foreign_key_constraint.py  2025_10_15_1446-eec7242b3a9b_modify_chat_history_add_project_id.py  2025_11_13_1731-add_timestamp_to_chat_step.py  2026_02_06_0440-9464b9d89de7_feat_trigger.py
server/app/: __init__.py
server/app/api/: __init__.py  demo_controller.py  redirect_controller.py
server/app/core/: babel.py  celery.py  code.py  database.py  encrypt.py  environment.py  oauth_adapter.py  redis_utils.py  sqids.py  trigger_utils.py
server/app/core/pydantic/: i18n.py
server/app/core/validator/: McpServer.py
server/app/domains/: __init__.py
server/app/domains/chat/: __init__.py
server/app/domains/config/: __init__.py
server/app/domains/mcp/: __init__.py
server/app/domains/model_provider/: __init__.py
server/app/domains/trigger/: __init__.py
server/app/domains/user/: __init__.py
server/app/model/abstract/: model.py
server/app/model/chat/: chat_history.py  chat_history_grouped.py  chat_share.py  (+2 more)
server/app/shared/: __init__.py  context.py  redis_publish.py  redis_sync.py
server/celery/beat/: start
server/celery/worker/: start
server/tests/: conftest.py  history_delete.http  test_auth.py  test_chat_share.py  test_proxy_controller.py  trigger_activate.http  user.http
(+431 files in other folders)
